--- a/PEC3/marathon/app/index.html
+++ b/PEC3/marathon/app/index.html
@@ -5,18 +5,29 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <script src="./app.js"></script>
 </head>
+
 <body>
+
   <h1>MARATHON RACE</h1>
   <br>
   <h2>Money collected</h2>
   <br><label>Total amount: </label><span id="totalAmount"></span>
   <br>
+
   <h2>Enroll Runner</h2>
   <br><label>Address of the Runner: </label><span id="addressOfTheRunner"></span>
   <br><br><button id="buttonEnroll" onclick="App.enrollRunner()">Enroll</button>
+  <br>
+  
+  <h2>Pay Price to the Winner's Marathon</h2>
+  <br><label for="receiver">Input Address of the Winner: </label><input type="text" id="addressOfTheWinner" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
+  <br><br><button id="buttonPayPrice" onclick="App.payPrice()">Pay Price</button>
   <br><br>
+
   <span id="status"></span>
   <br>
   <span class="hint"><strong>Hint:</strong> Open the browser developer console to view any errors and warnings.</span>
+
 </body>
+
 </html>
