--- a/PEC3/marathon/app/index.html
+++ b/PEC3/marathon/app/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta location.reload()>
   <title>MARATHON</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <script src="./app.js"></script>
