--- a/PEC3/marathon/app/index.html
+++ b/PEC3/marathon/app/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta location.reload()>
   <title>MARATHON</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <script src="./app.js"></script>
@@ -17,6 +16,7 @@
 
   <h2>Enroll Runner</h2>
   <br><label>Address of the Runner: </label><span id="addressOfTheRunner"></span>
+  <br><label for="amount">Enrollment Fee:</label><input type="text" id="amount" placeholder="e.g., 5"></input>
   <br><br><button id="buttonEnroll" onclick="App.enrollRunner()">Enroll</button>
   <br>
   
