--- a/PEC3/marathon/app/index.html
+++ b/PEC3/marathon/app/index.html
@@ -17,6 +17,11 @@
   <h2>Enroll Runner</h2>
   <br><label>Address of the Runner: </label><span id="addressOfTheRunner"></span>
   <br><label for="amount">Enrollment Fee:</label><input type="text" id="amount" placeholder="e.g., 5"></input>
+  <br><label for="name">Name:</label><input type="text" id="name" placeholder="e.g., John"></input>
+  <!--<br><label for="surName">Surname:</label><input type="text" id="surName" placeholder="e.g., Doyle"></input>
+  <br><label for="age">Age:</label><input type="text" id="age" placeholder="e.g., 18"></input>
+  <br><label for="dni">DNI:</label><input type="text" id="dni" placeholder="e.g., 12345678-Z" pattern="^[0-9]{8}[A-Z]$"></input>-->
+
   <br><br><button id="buttonEnroll" onclick="App.enrollRunner()">Enroll</button>
   <br>
   
