--- a/PEC3/marathon/app/index.html
+++ b/PEC3/marathon/app/index.html
@@ -17,12 +17,30 @@
   <h2>Enroll Runner</h2>
   <br><label>Address of the Runner: </label><span id="addressOfTheRunner"></span>
   <br><label for="amount">Enrollment Fee:</label><input type="text" id="amount" placeholder="e.g., 5"></input>
-  <br><label for="name">Name:</label><input type="text" id="name" placeholder="e.g., John"></input>
-  <!--<br><label for="surName">Surname:</label><input type="text" id="surName" placeholder="e.g., Doyle"></input>
+  <br><label for="name">Name:</label><input type="text" id="name" placeholder="e.g., Peter"></input>
+  <br><label for="surName">Surname:</label><input type="text" id="surName" placeholder="e.g., Smith"></input>
   <br><label for="age">Age:</label><input type="text" id="age" placeholder="e.g., 18"></input>
-  <br><label for="dni">DNI:</label><input type="text" id="dni" placeholder="e.g., 12345678-Z" pattern="^[0-9]{8}[A-Z]$"></input>-->
+  <br><label for="dni">DNI:</label><input type="text" id="dni" placeholder="e.g., 12345678Z" pattern="^[0-9]{8}[A-Z]{1}$"></input>
 
   <br><br><button id="buttonEnroll" onclick="App.enrollRunner()">Enroll</button>
+  <br>
+  <br>
+
+  <h2>Fetch for a Runner</h2>
+  <br><label for="receiver">Address of the Runner to get the information: </label><input type="text" id="addressToFetch" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
+  <br><br><button id="buttonFetch" onclick="App.fetchAttributesRunner()">Fetch for Runner</button>
+  <br>
+  <br><label>Name: </label><span id="NameRunnerRetrieved"></span>
+  <br><label>Surname: </label><span id="SurNameRunnerRetrieved"></span>
+  <br><label>Age: </label><span id="AgeRunnerRetrieved"></span>
+  <br><label>DNI: </label><span id="DNIRunnerRetrieved"></span>
+  <br><label>Time Race: </label><span id="RaceTimeRunnerRetrieved"></span>
+  <br>
+  <br>
+
+  <h2>Simulate Race</h2>
+  <br><br><button id="buttonSimulateRace" onclick="App.simulateRace()">Simulate Race</button>
+  <br>
   <br>
   
   <h2>Pay Price to the Winner's Marathon</h2>
