--- a/PEC3/marathon/app/index.html
+++ b/PEC3/marathon/app/index.html
@@ -43,12 +43,11 @@
   <br><br><button id="buttonSimulateRace" onclick="App.simulateRace()">Simulate Race</button>
   <br>
   <br><label>Address with random time assigned: </label><span id="AddressTimeAssigned"></span>
-  <br>
   <br><label>Random Time: </label><span id="RandomTime"></span>
   <br>
-  <br>
-
-
+  <br><label>The winner of the marathon is: </label><span id="addressOfTheWinner"></span>
+  <br><br>
+  
   <h2>Pay Price to the Winner's Marathon</h2>
   <br><label for="receiver">Input Address of the Winner: </label><input type="text" id="addressOfTheWinner" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
   <br><br><button id="buttonPayPrice" onclick="App.payPrice()">Pay Price</button>
