--- a/PEC3/marathon/app/index.html
+++ b/PEC3/marathon/app/index.html
@@ -46,10 +46,11 @@
   <br><label>Random Time: </label><span id="RandomTime"></span>
   <br>
   <br><label>The winner of the marathon is: </label><span id="addressOfTheWinner"></span>
+  <br><label>Time done by the winner: </label><span id="timeOfTheWinner"></span>
   <br><br>
   
   <h2>Pay Price to the Winner's Marathon</h2>
-  <br><label for="receiver">Input Address of the Winner: </label><input type="text" id="addressOfTheWinner" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
+  <br><label for="receiver">Input Address of the Winner: </label><input type="text" id="addressOfTheWinnerToPay" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
   <br><br><button id="buttonPayPrice" onclick="App.payPrice()">Pay Price</button>
   <br><br>
 
