--- a/PEC3/marathon/app/index.html
+++ b/PEC3/marathon/app/index.html
@@ -16,7 +16,6 @@
 
   <h2>Enroll Runner</h2>
   <br><label>Address of the Runner: </label><span id="addressOfTheRunner"></span>
-  <br><label>Address of the Runner2: </label><span id="addressOfTheRunner2"></span>
   <br><label for="amount">Enrollment Fee:</label><input type="text" id="amount" placeholder="e.g., 5"></input>
   <br><label for="name">Name:</label><input type="text" id="name" placeholder="e.g., Peter"></input>
   <br><label for="surName">Surname:</label><input type="text" id="surName" placeholder="e.g., Smith"></input>
@@ -50,7 +49,8 @@
   <br><br>
   
   <h2>Pay Price to the Winner's Marathon</h2>
-  <br><label for="receiver">Input Address of the Winner: </label><input type="text" id="addressOfTheWinnerToPay" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
+  <br><label>Total Price: </label><span id="totalBalance"> <label> ethers</label> </span>
+  <br><br><label for="receiver">Input Address of the Winner: </label><input type="text" id="addressOfTheWinnerToPay" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
   <br><br><button id="buttonPayPrice" onclick="App.payPrice()">Pay Price</button>
   <br><br>
 
