--- a/PEC3/marathon/app/index.html
+++ b/PEC3/marathon/app/index.html
@@ -14,7 +14,7 @@
   <br><label>Total amount: </label><span id="totalAmount"></span>
   <br>
 
-  <h2>Enroll Runner</h2>
+  <h2>Enroll Runner</h2>  <h3> - Fee: 5 ethers, Minimum age: 18</h3>
   <br><label>Address of the Runner: </label><span id="addressOfTheRunner"></span>
   <br><label for="amount">Enrollment Fee:</label><input type="text" id="amount" placeholder="e.g., 5"></input>
   <br><label for="name">Name:</label><input type="text" id="name" placeholder="e.g., Peter"></input>
@@ -42,10 +42,10 @@
   <br><br><button id="buttonSimulateRace" onclick="App.simulateRace()">Simulate Race</button>
   <br>
   <br><label>Address with random time assigned: </label><span id="AddressTimeAssigned"></span>
-  <br><label>Random Time: </label><span id="RandomTime"></span>
+  <br><label>Random Time: </label><span id="RandomTime"> <label> minutes</label> </span>
   <br>
   <br><label>The winner of the marathon is: </label><span id="addressOfTheWinner"></span>
-  <br><label>Time done by the winner: </label><span id="timeOfTheWinner"></span>
+  <br><label>Time done by the winner: </label><span id="timeOfTheWinner"> <label> minutes</label> </span>
   <br><br>
   
   <h2>Pay Price to the Winner's Marathon</h2>
@@ -56,8 +56,6 @@
 
   <span id="status"></span>
   <br>
-  <span class="hint"><strong>Hint:</strong> Open the browser developer console to view any errors and warnings.</span>
-
 </body>
 
 </html>
