--- a/PEC3/marathon/app/index.html
+++ b/PEC3/marathon/app/index.html
@@ -48,10 +48,10 @@
   <br><label>Time done by the winner: </label><span id="timeOfTheWinner"> <label> minutes</label> </span>
   <br><br>
   
-  <h2>Pay Price to the Winner's Marathon</h2>
-  <br><label>Total Price: </label><span id="totalBalance"> <label> ethers</label> </span>
+  <h2>Pay Prize to the Winner's Marathon</h2>
+  <br><label>Total Prize: </label><span id="totalBalance"> <label> ethers</label> </span>
   <br><br><label for="receiver">Input Address of the Winner: </label><input type="text" id="addressOfTheWinnerToPay" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
-  <br><br><button id="buttonPayPrice" onclick="App.payPrice()">Pay Price</button>
+  <br><br><button id="buttonPayPrice" onclick="App.payPrice()">Pay Prize</button>
   <br><br>
 
   <span id="status"></span>
